<resources>
    <string name="text_delivered_msg">送达</string>
    <string name="text_ack_msg">已读</string>
    <string name="app_name">拍得利</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="check_price">选择五等奖奖品</string>
    <string name="my_price">我的中奖</string>
    <string name="exchangemall">兑换商城</string>
    <string name="exchangedetails">兑换详情</string>
    <string name="earnpoints">赚拍币</string>
    <string name="home_appliances">家电</string>
    <string name="back">返回</string>
    <string name="btn1">服装</string>
    <string name="btn2">手机</string>
    <string name="btn3">化妆</string>
    <string name="btn4">图书</string>
    <string name="btn5">家居</string>
    <string name="btn6">箱包</string>
    <string name="btn7">家电</string>
    <string name="btn8">全部</string>
    <string name="more_address">更多收货地址</string>
    <string name="firm_order">确认订单</string>
    <string name="add_address">新增收货地址</string>
    <string name="modify_address">修改收货地址</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="user_login_title">登录</string>
    <string name="forgot_password_title">忘记密码</string>
    <string name="register_title">注册</string>
    <string name="phonecard">电话卡</string>
    <string name="one_hundred_yuan">中国移动话费充值100元</string>
    <string name="fifty_yuan">中国移动话费充值50元</string>
    <string name="exchange_number">已兑换12214</string>
    <string name="exchange_number1">已兑换3443</string>
    <string name="need_integral_number">50拍币可兑换</string>
    <string name="need_integral_number1">100拍币可兑换</string>
    <string name="my_news">我的消息</string>
    <string name="invite_friends">邀请好友2次</string>
    <string name="watch_ads_answer">看广告答题10次</string>
    <string name="improve_personal_data">完善个人资料</string>
    <string name="products_exchange">兑换商品1次</string>
    <string name="participate_in_drawing">参与摇奖3次</string>
    <string name="get_prize">领取奖品1次</string>
    <string name="mytask">我的任务</string>
    <string name="get_gold">赚取金币</string>
    <string name="feedback">意见反馈</string>
    <string name="suggestions_opinion">您的任何意见或建议都是我们宝贵的财富</string>
    <string name="input_comments">请输入您的意见或建议</string>
    <string name="type_words">还可以输入400字</string>
    <string name="submit">提交</string>
    <string name="user_agreement_title">用户使用协议</string>
    <string name="doing_task_title">做任务</string>
    <string name="residue_type_words">还可以输入%s字</string>
    <string name="service_tel">客服电话:010-8264886</string>
    <string name="exchange_products">兑换商品</string>
    <string name="winning_price">拍奖中奖</string>
    <string name="take_lottery_prize">拍奖开奖</string>
    <string name="integral">拍币</string>
    <string name="replace_phone_number">更换手机号</string>
    <string name="user_management">用户管理</string>
    <string name="merchant_manage">商家管理</string>
    <string name="advertising_before">投放前广告</string>
    <string name="advertising_center">投放中广告</string>
    <string name="advertising_end">投放后广告</string>
    <string name="firm_order_pop_text">是否确认消耗</string>
    <string name="points">拍币</string>
    <string name="common_question">常见问题</string>
    <string name="from_which_exchange_goods">1、从哪兑换商品?</string>
    <string name="any_specified_manufacturer">可以在任意指定的厂家</string>
    <string name="how_exchange_goods">2、如何兑换商品?</string>
    <string name="about_product">关于产品</string>
    <string name="about_company">关于公司</string>
    <string name="about_agreement">用户协议</string>
    <string name="about_paideli">关于拍得利</string>
    <string name="mine_title">我的</string>
    <string name="nickname_title">昵称</string>
    <string name="apply_merchant_text">《用户使用协议》</string>
    <string name="apply_merchant_ok">同意拍得利</string>
    <string name="apply_merchant_ps1">申请商家需要人工审核，请准确填写商家信息</string>
    <string name="apply_merchant_ps2">客服热线：010-8865214</string>
    <string name="apply_merchant">申请商家</string>
    <string name="merchant_map">商家定位</string>
    <string name="industry_category">行业类别</string>
    <string name="choose_industry_category">选择行业类别</string>
    <string name="industry_category_hint">请选择</string>
    <string name="business_profile">商家简介</string>
    <string name="business_profile_hint">请输入100字内的简要介绍</string>
    <string name="features_advantage">特色优势</string>
    <string name="features_advantage_hint">请输入20字内的主要特色</string>
    <string name="business_logo">商家LOGO</string>
    <string name="business_logo_ps">(请上传代表商家形象的logo，用于平台展示)</string>
    <string name="business_logo_ps1">(请上传营业执照照片，并输入营业执照号)</string>
    <string name="business_logo_ps2">(请上传税务登记证，组织机构代码证) 选填</string>
    <string name="upload_documents">商家资质</string>
    <string name="mycode">我的二维码</string>
    <string name="mycode_ps1">通过推荐好友直接获得相应拍币奖励</string>
    <string name="mycode_ps2">好友再推荐好友，将获得间接的相应拍币</string>
    <string name="weixin1">朋友圈</string>
    <string name="weixin">微信</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="qzone">QQ空间</string>
    <string name="QQ">QQ</string>
    <string name="wechat_id">微信号:paideili</string>
    <string name="attention_paideli">关注拍得利官方微信，会获得拍币奖励哦</string>
    <string name="customer_service_qq">客服QQ:875942269</string>
    <string name="customer_qq_group">客服QQ群:875942269</string>
    <string name="custom_mail">客服邮箱:875942269@qq.com</string>
    <string name="custom_telephone">客服电话:010-8236886</string>
    <string name="send_orders">目前派送订单数</string>
    <string name="send_order_details">派送订单详情</string>
    <string name="paideli_detail">由北京及时及雨网络公司倾情打造，每天都有让你赚不够的拍币，还有更多大奖等你拿。</string>
    <string name="about_company_title">及时及雨（北京）网络技术有限公司</string>
    <string name="about_company_detail">及时及雨（北京）网络技术有限公司是由“清华”的年轻企业家及来自美国微软、Google、EA的软件工程师和设计师共同创建的高科技IT企业。我们主要从事互联网行业的应用及服务的同时还开发网络娱乐产品的研发，我们的业务涉及了PC端及移动端的覆盖未来将要覆盖，IPTV端及网络云端的技术及服务。是一家年轻但具有相当竞争实力的高科技企业，在我们公司创建期间得到北京中关村科技园区及当地政府的大力扶持与支持。公司资本实力雄厚来源广泛，资本构成由美国上市企业及中关村及政府的资金扶持。我们所从事的产品及研发方向都是创新类产品或项目，有些是颠覆性的产品研发，因此不多介绍。所有员工公司提供五险一金的同时，每年年底所有员工都会根据贡献大小，获得一笔丰厚的业绩奖励上不封顶，是一家未来前途光明的高科技企业。</string>
    <string name="agreement_title">拍得利用户使用协议</string>
    <string name="paideili_agreement_title">拍得利用户协议</string>
    <string name="agreement_content">一、声明</string>
    <string name="agreement_content1">非经其原始授权人同意，任何人或用户均不得擅自下载、重制、传输、改作、编辑于任何为线上游戏目的以外的使用或任何以获利为目的的使用，否则应负所有法律责任。</string>
    <string name="order_inquiry">订单查询</string>
    <string name="friend_share">好友分享</string>
    <string name="friend_request_list">我的推荐列表</string>
    <string name="friend_request_nodata_tv1">当前无推荐好友</string>
    <string name="friend_request_nodata_tv2">快去推荐好友获得拍币吧</string>
    <string name="integral_statistics_title">拍币</string>
    <string name="watch_advertisement">看广告</string>
    <string name="save">保存</string>
    <string name="no_setting">未设置</string>
    <string name="ernie_1">一等奖</string>
    <string name="ernie_2">二等奖</string>
    <string name="ernie_3">三等奖</string>
    <string name="ernie_4">四等奖</string>
    <string name="btn_no_check">取消选择</string>
    <string name="btn_check">选择</string>
    <string name="check_toast">请选择奖品</string>
    <string name="ext">取消</string>
    <string name="end">确定</string>
    <string name="dialog_loading">加载中..</string>
    <string name="continue_answer_questions">继续答题</string>
    <string name="share_friend">分享好友</string>
    <string name="yunxu">允许</string>
    <string name="buyunxu">不允许</string>
    <string name="bmcj">报名参加</string>
    <string name="touxiang">头像</string>
    <string name="nicheng">昵称</string>
    <string name="phonenum">手机号</string>
    <string name="xingbie">性别</string>
    <string name="shengri">生日</string>
    <string name="zhiye">职业</string>
    <string name="diqu">地区</string>
    <string name="dizhi">我的收货地址</string>
    <string name="login">登录</string>
    <string name="phone_number_hint">手机号</string>
    <string name="password_hint">密码</string>
    <string name="login_btn_text">登录</string>
    <string name="remember_pwd_text">记住密码</string>
    <string name="forgot_pwd_text">忘记密码?</string>
    <string name="register_text">注册</string>
    <string name="verification_code_hint">验证码</string>
    <string name="getverification_code_hint">获取验证码</string>
    <string name="input_new_password_hint">输入新密码</string>
    <string name="input_new_password_again_hint">再次输入新密码</string>
    <string name="btn_done_text">完成</string>
    <string name="input_password_hint">输入密码</string>
    <string name="input_password_again_hint">再次输入</string>
    <string name="btn_tonext_text">下一步</string>
    <string name="register_textview">轻触下一步将同意拍得利</string>
    <string name="user_agreement_text">《用户使用协议》</string>
    <string name="invitation_code_hint">邀请码</string>
    <string name="invitation_code_textview">输入推荐人邀请码，即可获得30拍币奖励</string>
    <string name="register_ok_btn_text">完成注册</string>
    <string name="skip_done_text">跳过并完成注册</string>
    <string name="change_pwd_text">修改密码</string>
    <string name="voice_text">声音</string>
    <string name="exit_login_btn_text">退出登录</string>
    <string name="order_search_btn_text">订单查询</string>
    <string name="my_account_btn_text">我的账户</string>
    <string name="ticket_record_btn_text">兑换商品记录</string>
    <string name="winning_record_btn_text">中奖记录</string>
    <string name="upgrad_to_businessman_btn_text">升级为商家</string>
    <string name="checkver_btn_text">检查新版本</string>
    <string name="feedback_btn_text">意见反馈</string>
    <string name="faq_btn_text">常见问题</string>
    <string name="about_pdl_btn_text">关于拍得利</string>
    <string name="old_pwd_hint">原密码</string>
    <string name="new_pwd_hint">新密码</string>
    <string name="new_pwd_again_hint">确认密码</string>
    <string name="change_pwd_ok_btn_text">确认修改</string>
    <string name="sign_in">签到</string>
    <string name="message">消息</string>
    <string name="shut">关闭</string>
    <string name="today_sign_in">今日签到</string>
    <string name="integral_balance">我的拍币</string>
    <string name="integral_today">今日拍币</string>
    <string name="integral_total">我的金币</string>
    <string name="enter_for">报名参加</string>
    <string name="earn_integral">赚取拍币</string>
    <string name="earn_gold"> 赚取金币</string>
    <string name="shake_prize">开心摇奖</string>
    <string name="yiyuan_shake_prize">一元摇奖</string>
    <string name="user_show_prize">用户晒奖</string>
    <string name="my_invite">我要邀请</string>
    <string name="my_friend">我的好友</string>
    <string name="my">个人中心</string>
    <string name="sure">确定</string>
    <string name="update_photo">上传照片</string>
    <string name="input_prize_name">请输入奖品名称</string>
    <string name="mine_prize_speak">获奖感言</string>
    <string name="show_prize_input">发表获奖感言</string>
    <string name="share_prize_des">参加我要晒奖，分享获奖经历</string>
    <string name="mine_show_prize">我要晒奖</string>
    <string name="user_count">玩家账号</string>
    <string name="prize_speak">获奖感言</string>
    <string name="input_prize_des">奖品是真心的好啊，不错，不错，下次希望中个更大更好的才行！</string>
    <string name="get_integral">我的拍币</string>
    <string name="used_integral">我的金币</string>
    <string name="firm_exchange">确认兑换</string>
    <string name="firm_reward">确认领奖</string>
    <string name="nickname_hint">昵称</string>
    <string name="nickname_redhint_text">输入昵称为2-10字符</string>
    <string name="nickname_savebtn_text">保存</string>
    <string name="from_pic_text">相册选取</string>
    <string name="from_camera_text">相机拍摄</string>
    <string name="select_trade_hint">选择行业</string>
    <string name="select_job_hint">选择职业</string>
    <string name="zixun">咨询</string>
    <string name="integral5">拍币+5</string>
    <string name="integral3">拍币+3</string>
    <string name="integral2">拍币+2</string>
    <string name="integral1">拍币+1</string>
    <string name="firm">确认</string>
    <string name="share">分享</string>
    <string name="news_des_more">详情戳戳戳</string>
    <string name="join_ernie_over">当期摇奖报名已经结束！</string>
    <string name="check_price_text">您已选择：0件商品</string>
    <string name="digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>