<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp" >

    <EditText
        android:id="@+id/old_pwd_edittext"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/edittextbg"
        android:digits="@string/digits"
        android:ems="10"
        android:hint="@string/old_pwd_hint"
        android:inputType="textPassword"
        android:maxLength="30"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:textColor="@color/edittext_color"
        android:textColorHint="@color/edittext_color_hint"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/btn_text_size" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/new_pwd_edittext"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_bg"
        android:digits="@string/digits"
        android:ems="10"
        android:hint="@string/new_pwd_hint"
        android:inputType="textPassword"
        android:maxLength="30"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:textColor="@color/edittext_color"
        android:textColorHint="@color/edittext_color_hint"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/btn_text_size" />

    <EditText
        android:id="@+id/new_pwd_again_edittext"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittextbg"
        android:digits="@string/digits"
        android:ems="10"
        android:hint="@string/new_pwd_again_hint"
        android:inputType="textPassword"
        android:maxLength="30"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:textColor="@color/edittext_color"
        android:textColorHint="@color/edittext_color_hint"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/btn_text_size" />

    <TextView
        android:id="@+id/change_pwd_ok_btn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_click2"
        android:gravity="center"
        android:text="@string/change_pwd_ok_btn_text"
        android:textColor="@color/edittext_color"
        android:textSize="@dimen/edittext_size" />

</LinearLayout>