<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top_layout"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/top_hight"
    android:background="@drawable/head_bg" >

    <Button
        android:id="@+id/btn_top_left"
        android:layout_width="48dip"
        android:layout_height="24dip"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dip"
        android:background="@drawable/button_filleted_corner_selecte"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:visibility="gone" />

    <Button
        android:id="@+id/img_btn_top_left"
        android:layout_width="48dip"
        android:layout_height="24dip"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dip"
        android:background="@drawable/btn_back"
        android:clickable="true"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/top_text"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/top_textsize" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" >

        <Button
            android:id="@+id/btn_top_right"
            android:layout_width="48dip"
            android:layout_height="24dip"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dip"
            android:background="@drawable/button_filleted_corner_selecte"
            android:text="@string/message"
            android:textColor="@color/white"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_news_number"
            android:layout_width="16dip"
            android:layout_height="16dip"
            android:layout_gravity="right"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/message_bg"
            android:gravity="center"
           	android:focusable="false"
            android:maxLength="2"
            android:visibility="invisible" />
    </FrameLayout>

    <Button
        android:id="@+id/img_btn_top_right"
        android:layout_width="48dip"
        android:layout_height="24dip"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="16dip"
        android:background="@drawable/btn_shut"
        android:clickable="true"
        android:text="@string/shut"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:visibility="gone" />

</RelativeLayout>